--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "method-override": "^2.3.9",
+    "morgan": "^1.8.2",
     "mysql2": "^1.3.6",
     "nodemon": "^1.11.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.3.1"
   }
 }
