--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "nodemon": "^1.11.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^4.3.1"
+    "sequelize": "^4.3.1",
+    "connect-flash" : "~0.1.1",     
+    "bcrypt-nodejs" : "latest",
+    "express-session": "~1.0.0"
   }
 }
