--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "bcrypt-nodejs": "latest",
     "body-parser": "^1.15.2",
-    "connect-flash": "~0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
-    "express-session": "~1.0.0",
+    "express-session": "^1.15.5",
     "method-override": "^2.3.9",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.6",
