--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ejs": "^2.5.7",
     "express": "^4.14.0",
     "express-session": "^1.15.5",
+    "formidable": "^1.1.1",
+    "fs": "0.0.1-security",
     "method-override": "^2.3.9",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.6",
